# neko

./: neko.code-workspace
koneko/: package-lock.json  package.json
koneko/src/: App.vue  main.ts  router.ts
koneko/src/pages/: LobbyPage.vue
koneko/src/store/: lobbyStore.ts
noraneko/: Dockerfile  README.md  noxfile.py  pyproject.toml
noraneko/src/noraneko/: app.py  bindings.py  broker.py  game.py  queue_wrapper.py  routs.py  server.py
noraneko/src/noraneko/game/: __init__.py  engine.py
noraneko/tests/test_api/: conftest.py  test_root.py
